--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t irusio/fibonnaci -f Dockerfile.dev1 .
+  - docker build -t irusio/fibonnaci -f Dockerfile .
 
 script:
   - docker run -e CI=true irusio/fibbonacci npm run test
