--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
   env: "fibbonaccitest-env"
   bucket_name: "elasticbeanstalk-us-east-1-092118888492"
   bucket_path: "fibbonacci"
+  edge: true
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
