--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t irusio/fibonnaci -f Dockerfile .
+  - docker build -t irusio/fibbonacci -f Dockerfile .
 
 script:
   - docker images
