--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
   bucket_path: "fibbonacci"
   edge: true
   on:
-    branch: main
+    branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
